// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/applications When api error occurs should render and match snapshot 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="grid__header"
    >
      <div
        class="grid__header__left"
      >
        <div
          class="grid__header__left__title"
        >
          Applications
        </div>
        <div
          class="grid__header__left__data-count"
        >
          (
          0
          /
          0
          )
        </div>
      </div>
      <div
        class="grid__header__right"
      >
        <div
          class="grid__header__right__filter"
        >
          <i
            class="fas fa-filter "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="filterby-select"
            >
              <option
                value="name"
              >
                Name
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="status"
              >
                Status
              </option>
            </select>
          </label>
          <input
            class="combo-box"
            data-testid="filter-value-input"
            list="filter-value-input"
            value=""
          />
        </div>
        <div
          class="grid__header__right__sort"
        >
          <i
            class="fas fa-sort "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="select"
            >
              <option
                selected=""
                value="application_date"
              >
                Application Date
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="year_of_experience"
              >
                Years of experience
              </option>
            </select>
          </label>
          <button
            class="button button--tertiary"
            data-testid="sort-order-button"
          >
            <i
              class="fas fa-arrow-up "
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="grid__error"
    >
      An error occured
      <div>
        <a
          data-testid="refresh-grid-button"
        >
          <i
            class="fas fa-sync fa-2x"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`modules/applications When component is rendered first should render and match snapshot 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="grid__header"
    >
      <div
        class="grid__header__left"
      >
        <div
          class="grid__header__left__title"
        >
          Applications
        </div>
        <div
          class="grid__header__left__data-count"
        >
          (
          0
          /
          0
          )
        </div>
      </div>
      <div
        class="grid__header__right"
      >
        <div
          class="grid__header__right__filter"
        >
          <i
            class="fas fa-filter "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="filterby-select"
            >
              <option
                value="name"
              >
                Name
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="status"
              >
                Status
              </option>
            </select>
          </label>
          <input
            class="combo-box"
            data-testid="filter-value-input"
            list="filter-value-input"
            value=""
          />
        </div>
        <div
          class="grid__header__right__sort"
        >
          <i
            class="fas fa-sort "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="select"
            >
              <option
                selected=""
                value="application_date"
              >
                Application Date
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="year_of_experience"
              >
                Years of experience
              </option>
            </select>
          </label>
          <button
            class="button button--tertiary"
            data-testid="sort-order-button"
          >
            <i
              class="fas fa-arrow-up "
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="grid__table grid__table--grid-8"
    >
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Id
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Name
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Email
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Birth Date
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Application Date
        </div>
        <i
          class="fas fa-arrow-up "
        />
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Position Applied
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Status
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Years of experience
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`modules/applications When data is loading should render and match snapshot 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="grid__header"
    >
      <div
        class="grid__header__left"
      >
        <div
          class="grid__header__left__title"
        >
          Applications
        </div>
        <div
          class="grid__header__left__data-count"
        >
          (
          0
          /
          0
          )
        </div>
      </div>
      <div
        class="grid__header__right"
      >
        <div
          class="grid__header__right__filter"
        >
          <i
            class="fas fa-filter "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="filterby-select"
            >
              <option
                value="name"
              >
                Name
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="status"
              >
                Status
              </option>
            </select>
          </label>
          <input
            class="combo-box"
            data-testid="filter-value-input"
            list="filter-value-input"
            value=""
          />
        </div>
        <div
          class="grid__header__right__sort"
        >
          <i
            class="fas fa-sort "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="select"
            >
              <option
                selected=""
                value="application_date"
              >
                Application Date
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="year_of_experience"
              >
                Years of experience
              </option>
            </select>
          </label>
          <button
            class="button button--tertiary"
            data-testid="sort-order-button"
          >
            <i
              class="fas fa-arrow-up "
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="grid__loading"
    >
      <i
        class="fas fa-spinner fa-2x fa-spin"
      />
    </div>
  </div>
</div>
`;

exports[`modules/applications When data is present in store When sort is changed should render and match snapshot 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="grid__header"
    >
      <div
        class="grid__header__left"
      >
        <div
          class="grid__header__left__title"
        >
          Applications
        </div>
        <div
          class="grid__header__left__data-count"
        >
          (
          2
          /
          2
          )
        </div>
      </div>
      <div
        class="grid__header__right"
      >
        <div
          class="grid__header__right__filter"
        >
          <i
            class="fas fa-filter "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="filterby-select"
            >
              <option
                value="name"
              >
                Name
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="status"
              >
                Status
              </option>
            </select>
          </label>
          <input
            class="combo-box"
            data-testid="filter-value-input"
            list="filter-value-input"
            value=""
          />
        </div>
        <div
          class="grid__header__right__sort"
        >
          <i
            class="fas fa-sort "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="select"
            >
              <option
                selected=""
                value="application_date"
              >
                Application Date
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="year_of_experience"
              >
                Years of experience
              </option>
            </select>
          </label>
          <button
            class="button button--tertiary"
            data-testid="sort-order-button"
          >
            <i
              class="fas fa-arrow-up "
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="grid__table grid__table--grid-8"
    >
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Id
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Name
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Email
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Birth Date
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Application Date
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Position Applied
        </div>
        <i
          class="fas fa-arrow-up "
        />
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Status
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Years of experience
        </div>
        
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        Jane Smith
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        2022-10-10
      </div>
      <div
        class="grid__table__cell"
      >
        QA Engineer
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        John Doe
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        2019-10-10
      </div>
      <div
        class="grid__table__cell"
      >
        writer
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
    </div>
  </div>
</div>
`;

exports[`modules/applications When data is present in store should render and match snapshot 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="grid__header"
    >
      <div
        class="grid__header__left"
      >
        <div
          class="grid__header__left__title"
        >
          Applications
        </div>
        <div
          class="grid__header__left__data-count"
        >
          (
          2
          /
          2
          )
        </div>
      </div>
      <div
        class="grid__header__right"
      >
        <div
          class="grid__header__right__filter"
        >
          <i
            class="fas fa-filter "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="filterby-select"
            >
              <option
                value="name"
              >
                Name
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="status"
              >
                Status
              </option>
            </select>
          </label>
          <input
            class="combo-box"
            data-testid="filter-value-input"
            list="filter-value-input"
            value=""
          />
        </div>
        <div
          class="grid__header__right__sort"
        >
          <i
            class="fas fa-sort "
          />
          <label
            class="select"
          >
            <span
              class="select__label"
            />
            <select
              class="select__element"
              data-testid="select"
            >
              <option
                selected=""
                value="application_date"
              >
                Application Date
              </option>
              <option
                value="position_applied"
              >
                Position Applied
              </option>
              <option
                value="year_of_experience"
              >
                Years of experience
              </option>
            </select>
          </label>
          <button
            class="button button--tertiary"
            data-testid="sort-order-button"
          >
            <i
              class="fas fa-arrow-up "
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="grid__table grid__table--grid-8"
    >
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Id
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Name
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Email
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Birth Date
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Application Date
        </div>
        <i
          class="fas fa-arrow-up "
        />
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Position Applied
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Status
        </div>
        
      </div>
      <div
        class="grid__table__cell grid__table__cell--header"
      >
        <div
          class="grid__table__cell--header__label"
        >
          Years of experience
        </div>
        
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        John Doe
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        2019-10-10
      </div>
      <div
        class="grid__table__cell"
      >
        writer
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        Jane Smith
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      >
        2022-10-10
      </div>
      <div
        class="grid__table__cell"
      >
        QA Engineer
      </div>
      <div
        class="grid__table__cell"
      />
      <div
        class="grid__table__cell"
      />
    </div>
  </div>
</div>
`;
